log
Fri Apr  8 15:06:30 UTC 2022: 
 tests:  0|6
total_score: 0/70
a90b196
Fri Apr  8 15:57:29 UTC 2022: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:55:3: error: unknown type name ‘Hashmap’; did you mean ‘HashMap’?
   Hashmap *aux=(Hashmap*)malloc(sizeof(Hashmap));
   ^~~~~~~
   HashMap
hashmap.c:55:17: error: ‘Hashmap’ undeclared (first use in this function); did you mean ‘HashMap’?
   Hashmap *aux=(Hashmap*)malloc(sizeof(Hashmap));
                 ^~~~~~~
                 HashMap
hashmap.c:55:17: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:55:25: error: expected expression before ‘)’ token
   Hashmap *aux=(Hashmap*)malloc(sizeof(Hashmap));
                         ^
hashmap.c:56:6: error: request for member ‘buckets’ in something not a structure or union
   aux->buckets=(Pair**)malloc(sizeof(Pair*)*capacity);
      ^~
hashmap.c:57:6: error: request for member ‘capacity’ in something not a structure or union
   aux->capacity=capacity;
      ^~
hashmap.c:58:6: error: request for member ‘size’ in something not a structure or union
   aux->size=size;
      ^~
hashmap.c:58:13: error: ‘size’ undeclared (first use in this function); did you mean ‘sinl’?
   aux->size=size;
             ^~~~
             sinl
hashmap.c:59:6: error: request for member ‘current’ in something not a structure or union
   aux->current=-1;
      ^~
hashmap.c:60:12: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
     return aux;
            ^~~
cc1: all warnings being treated as errors
Compilation failed
d295516
Fri Apr  8 15:58:24 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:58:13: error: ‘size’ undeclared (first use in this function); did you mean ‘sinl’?
   aux->size=size;
             ^~~~
             sinl
hashmap.c:58:13: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
09f3311
Fri Apr  8 15:58:47 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:58:12: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
   aux->size=sinl;
            ^
cc1: all warnings being treated as errors
Compilation failed
8a08029
Fri Apr  8 15:59:02 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:58:12: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
   aux->size=NULL;
            ^
cc1: all warnings being treated as errors
Compilation failed
6494632
Fri Apr  8 15:59:27 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
cbcfb70
Fri Apr  8 16:08:14 UTC 2022: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:57:10: error: expected identifier or ‘(’ before ‘=’ token
   for(int=0;i<capacity;i++){
          ^
hashmap.c:57:13: error: ‘i’ undeclared (first use in this function)
   for(int=0;i<capacity;i++){
             ^
hashmap.c:57:13: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
c30b263
Fri Apr  8 16:08:26 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
fc828b3
Sun Apr 10 00:44:35 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘searchMap’:
hashmap.c:74:5: error: expected ‘;’ before ‘return’
     return NULL;
     ^~~~~~
hashmap.c:75:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
eeb00c1
Sun Apr 10 00:45:25 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘searchMap’:
hashmap.c:74:5: error: expected ‘;’ before ‘return’
     return Pair*;
     ^~~~~~
hashmap.c:75:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
36dee61
Sun Apr 10 00:45:35 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘searchMap’:
hashmap.c:74:12: error: expected expression before ‘Pair’
     return Pair*;
            ^~~~
hashmap.c:75:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
ab2c4e6
Sun Apr 10 01:08:46 UTC 2022: 
 hashmap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function ‘searchMap’:
hashmap.c:73:43: error: passing argument 2 of ‘is_equal’ makes pointer from integer without a cast [-Werror=int-conversion]
   while(map->buckets[aux] && is_equal(key,map->buckets[aux] == 0)){
                                           ^~~
hashmap.c:35:5: note: expected ‘void *’ but argument is of type ‘int’
 int is_equal(void* key1, void* key2){
     ^~~~~~~~
hashmap.c:77:13: error: invalid type argument of ‘->’ (have ‘long int’)
   return aux->buckets[aux];
             ^~
hashmap.c:78:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
4378927
Sun Apr 10 01:09:20 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘searchMap’:
hashmap.c:77:13: error: invalid type argument of ‘->’ (have ‘long int’)
   return aux->buckets[aux];
             ^~
hashmap.c:78:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
f6615c7
Sun Apr 10 01:10:13 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
13f46c4
